src/popup/popup.css
:root {
  --BUTTON-HEIGHT: 30px;
  --FLEX-PADDING: 5px;
  --FONT-SIZE: 15px;
  --MARGIN: 10px;
  --SPACE-BETWEEN-SECTIONS: 10px;
  --SQUARE-BUTTON-WIDTH: 30px;
}

body {
  background-color: white;
  font-size: var(--FONT-SIZE);
  overflow-x: hidden; /* no x-axis scroll */
  min-width: 310px;
  margin: 0;
}

#popup-content {
  width: 95%;
  margin: var(--MARGIN) auto;
}

/* https://stackoverflow.com/questions/271067/how-can-i-make-a-textarea-100-width-without-overflowing-when-padding-is-present */
textarea {
  box-sizing: border-box;
  width: 100%;
}

p {
  margin: 0;
}

button,
input[type="image"] {
  background-color: #e5f2f2;
  border-bottom-color: #979797;
  border-left-color: #e8e8e8;
  border-right-color: #979797;
  border-style: solid;
  border-top-color: #e8e8e8;
  border-width: 2px;
  cursor: pointer;
  height: var(--BUTTON-HEIGHT);
  padding: 4px;
  text-align: center;
  width: 100%;
}

button:hover,
input[type="image"]:hover {
  background-color: #cff2f2;
}

/* https://www.scriptol.com/html5/button-on-off.php */
.switchConfig button {
  width: var(--SQUARE-BUTTON-WIDTH);
  height: var(--BUTTON-HEIGHT);
  background: lightgray;
  padding: 1px 2px 3px 3px;
}

.onOffButton div {
  color: gray;
  font-size: 12px;
}

.sourceConfig,
.switchConfig {
  display: flex;
  flex-direction: row;
  gap: 10px;
}

.sourceConfig p,
.switchConfig p {
  display: flex;
  align-items: center;
}

/* flex-shrink: to respect width https://stackoverflow.com/questions/21406397/width-ignored-on-flexbox-items */
.sourceConfig button {
  display: flex;
  height: var(--BUTTON-HEIGHT);
  width: var(--SQUARE-BUTTON-WIDTH);
  flex-shrink: 0;
}

.sourceConfig input {
  width: 100%;
}

#infoScroll,
#buttonShowSources,
#infoTags,
#buttonShowConfig,
#menuConfig {
  margin-top: var(--SPACE-BETWEEN-SECTIONS);
}

#menuConfig > .switchConfig ~ .switchConfig,
#menuConfig > p,
#menuConfig > fieldset {
  margin-top: var(--SPACE-BETWEEN-SECTIONS);
}

#sourcesConfigValues > *,
.info-container > * {
  margin-top: var(--SPACE-BETWEEN-SECTIONS);
}

.oneLineButtons {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  gap: var(--FLEX-PADDING);
}

.hidden {
  display: none;
}

.backgroundGray {
  background: rgb(240, 240, 240);
}

#infoScroll,
#infoTags,
#menuConfig {
  padding: var(--MARGIN);
}

/* https://stackoverflow.com/questions/10309408/how-to-add-vertical-spacing-between-block-elements-but-not-top-and-bottom */
#infoTags li + li,
p + p {
  margin-top: var(--MARGIN);
}
#infoTags ol {
  margin-bottom: 0px;
}

/* Horizontal scrollbar for long paragraphs */
#infoTags,
#menuConfig {
  overflow: auto;
}

.detections {
  display: flex;
  flex-direction: column;
  gap: var(--SPACE-BETWEEN-SECTIONS);
  list-style: none;
  padding-left: var(--MARGIN);
}

.detections li {
  display: flex;
  align-items: center;
  gap: var(--MARGIN);
}

/* flex-shrink: to respect width if the UR~ is too long https://stackoverflow.com/questions/21406397/width-ignored-on-flexbox-items */
.detections button {
  width: var(--SQUARE-BUTTON-WIDTH);
  flex-shrink: 0;
}

.detections img {
  height: 100%;
  width: 100%;
}

.tooltip {
  position: relative;
  display: inline-block;
}

.tooltiptext {
  visibility: hidden;
  width: 130px;
  background-color: black;
  color: #fff;
  border-radius: 5px;
  padding: 10px;
  position: absolute;
  top: var(--BUTTON-HEIGHT); /* Position above the button */
  margin-left: 30px; /* Center the tooltip */
  transition: opacity 0.3s;
}

.tooltip.show .tooltiptext {
  visibility: visible;
  opacity: 0.8;
}

